--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">    
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="shortcut icon" href="http://ichef.bbci.co.uk/wwfeatures/wm/live/976_549/images/live/p0/2v/dp/p02vdpfn.jpg" />
     <title>SSDN</title>
   </head>
   <body>
